# spxZKP-smart-contracts

./: .gitignore  .gitmodules  Cargo.toml  README.md  deployment-guide.md  foundry.toml  remappings.txt  sig.json
MutipleWallet_frontend/: README.md  nextjs.config.js  package.json  tailwind.config.js  tsconfig.json
MutipleWallet_frontend/.next/: app-build-manifest.json  trace
MutipleWallet_frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.js  (+2 more)
MutipleWallet_frontend/database/: signature_result_0.json  signature_result_1.json
MutipleWallet_frontend/spxlibAPI/: Makefile  compile_commands.json
MutipleWallet_frontend/src/: wagmi.ts
apps/: Cargo.toml  README.md
cache/: solidity-files-cache.json
contracts/: ISpxVrfy.sol  ImageID.sol  SpxVrfy.sol  StableCoinMinter.sol  ThresholdWallet.sol  ThresholdWalletFactory.sol  WLCEngine.sol  spxCoin.sol  spxMarketplace.sol  spxNFT.sol
contracts/BasicDefi/: StableCoinMinter.sol  WLCEngine.sol
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/lib/spx_module/: Cargo.toml
methods/guest/src/lib/spx_module/src/: address.rs  api.rs  context.rs  fors.rs  lib.rs  offsets.rs  params.rs  sign.rs  sm3.rs  thash.rs  utils.rs  wots.rs
methods/guest/src/lib/spx_module/src/hash/: sm3.rs
methods/guest/src/lib/spx_module/src/offsets/: sm3.rs
methods/guest/src/lib/spx_module/src/params/: f128.rs  f192.rs  f256.rs  s128.rs  s192.rs  s256.rs
methods/guest/src/lib/spx_module/src/thash/: sm3_robust.rs  sm3_simple.rs
methods/src/: lib.rs
script/: Deploy.s.sol  DeployDefi.s.sol  HelperCofig.s.sol
tests/: Elf.sol  ThresholdWallet.t.sol  spxMarketplaceTest.t.sol  spxVrfy.t.sol
tests/unit/: WLCEngine.t.sol
(+209 files in other folders)
