[package]
name = "spx_sm3"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
pqc_core = {version = "0.3.0", features = ["load"]}

# Must enable only one from each of the groups below
# otherwise library will throw a compilation error
[features]

### Hash ###
sm3 = []

### Security level ###
# Considered equivalent to 128, 192 and 256 bit
# NIST levels 1, 3 & 5 respectively
# Additionally there is a fast signature mode (f)
# and a small signature mode (s)
# See the readme and benchmarks for comparison. 
f128 = []
f192 = []
f256 = []
s128 = []
s192 = []
s256 = []

### Tree Hash ###
# SPHINCS+ splits the signatures schemes into a simple and a robust 
# variant for each choice of hash function. The robust variant is 
# comes with all the conservative security guarantees given in SPHNICS. 
# The simple variants are pure random oracle instantiations. These 
# instantiations achieve about a factor three speed-up 
# compared to the robust counterparts. This comes at the 
# cost of a purely heuristic security argument.
simple = []
robust = []
